fix bugs - integration tests are working again, clean-up